Added a Sidebar Menu

--- a/src/css/lib/nav.css
+++ b/src/css/lib/nav.css
@@ -1,3 +1,48 @@
+.bm-menu-wrap {
+    right: -5px!important;
+    top: 0px!important;
+}
+
+.bm-overlay {
+    position: fixed!important;
+    z-index: 1000!important;
+    width: 150%!important;
+    height: 150%!important;
+    background: rgba(0, 0, 0, 0.3)!important;
+    opacity: 1;
+    margin: -300px 0px 0px -500px!important;
+    padding: 0px!important;
+    transition: opacity 0.3s ease 0s!important;
+}
+
+.bm-item-list {
+    height: 100%!important;
+    background: var(--themecolor)!important;
+    width: 100%!important;
+    padding: 50px 0 0 0!important;
+    position: fixed!important;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+}
+
+.bm-item-list a {
+    color: var(--white)!important;
+    display: block!important;
+    font-family: var(--globalfont)!important;
+    font-weight: bold!important;
+    font-size: 0.75em!important;
+    text-transform: capitalize!important;
+    outline: none!important;
+}
+
+.bm-item-list a:hover {
+    color: var(--themecolor)!important;
+    display: block!important;
+    font-family: var(--globalfont)!important;
+    font-weight: bold!important;
+    font-size: 0.75em!important;
+    background: white!important;
+}
+
 .Navigation {
     display: flex;
     flex: 1;
